Update to Java 17; Cleanups